--- a/sigavan/app/src/main/res/layout/activity_passageiro.xml
+++ b/sigavan/app/src/main/res/layout/activity_passageiro.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbaractivity"
+        android:id="@+id/toolbarpactivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
@@ -16,7 +16,7 @@
         android:id="@+id/iconeapp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/toolbaractivity"
+        android:layout_below="@id/toolbarpactivity"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:contentDescription="@string/icone"
