--- a/sigavan/app/src/main/res/layout/activity_motorista.xml
+++ b/sigavan/app/src/main/res/layout/activity_motorista.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbaractivity"
+        android:id="@+id/toolbarmactivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/ToolbarTheme"
@@ -17,7 +17,7 @@
         android:id="@+id/faculdadeSpinner"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_below="@id/toolbaractivity"
+        android:layout_below="@id/toolbarmactivity"
         android:spinnerMode="dialog" />
 
     <android.support.v7.widget.RecyclerView
