--- a/sigavan/app/src/main/res/layout/activity_motorista.xml
+++ b/sigavan/app/src/main/res/layout/activity_motorista.xml
@@ -22,32 +22,9 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvPassageiros"
+        android:layout_below="@id/faculdadeSpinner"
         android:layout_width="match_parent"
-        android:layout_height="394dp"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
+        android:layout_height="match_parent"
         tools:listitem="@layout/viewholder" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="22dp"
-        android:layout_marginEnd="27dp"
-        android:clickable="true"
-        app:srcCompat="@android:drawable/ic_input_add" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="33dp"
-        android:layout_marginStart="28dp"
-        android:clickable="true"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
 
 </RelativeLayout>
